# holocron

./: LICENSE  README.rst  prek.toml  pyproject.toml
.github/workflows/: ci.yml
src/holocron/: main.py
tests/: test_app.py
