[project]
name = "holocron"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi >= 0.129.0",
    "httpx >= 0.23.0, <1.0.0",
    "jinja2 >= 3.1.5",
    "python-multipart >= 0.0.18",
    "email-validator >= 2.0.0",
    "pydantic-settings >= 2.0.0",
    "uvicorn[standard] >= 0.12.0",
    "pydantic-extra-types[pendulum] >= 2.0.0",
    "fastapi-cli[standard-no-fastapi-cloud-cli] >= 0.0.8",
]

[dependency-groups]
dev = [
    "prek>=0.3.3",
]
