[project]
name = "holocron"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi >= 0.129.0",
    "httpx >= 0.23.0, <1.0.0",
    "jinja2 >= 3.1.5",
    "python-multipart >= 0.0.18",
    "email-validator >= 2.0.0",
    "pydantic-settings >= 2.0.0",
    "uvicorn[standard] >= 0.12.0",
    "pydantic-extra-types[pendulum] >= 2.0.0",
    "fastapi-cli[standard-no-fastapi-cloud-cli] >= 0.0.8",
]

[dependency-groups]
dev = [
    "prek>=0.3.3",
]


[tool.ruff]
fix = true
line-length = 88

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ERA", # flake8-eradicate/eradicate
    "I",   # isort
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PGH", # pygrep
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "TC",  # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
]
extend-safe-fixes = [
    "TC",  # move import from and to TYPE_CHECKING blocks
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
force-single-line = true
lines-between-types = 1
lines-after-imports = 2
known-first-party = ["holocron"]
required-imports = ["from __future__ import annotations"]
